traces/bug_612.txt
src/medit/mlists.c:923: error: DEAD_STORE
  The value written to &cx (type float) is never used.
Showing all 1 steps of the trace


src/medit/mlists.c:923:13: Write of unused value
921.               ps1 = &mesh->sol[ adj[0] ];
922.               
923.               cx = (p1->c[0] + p2->c[0] + p3->c[0]) / 3.0;
                   ^
924.               cy = (p1->c[1] + p2->c[1] + p3->c[1]) / 3.0;
925.               cz = ps1->bb;
